# comp3-3d-prog

./: CMakeLists.txt  HeightMap.cpp  HeightMap.h  ObjLoader.cpp  ObjLoader.h  RenderWindow.cpp  RenderWindow.cpp.bak  RenderWindow.cpp.new  RenderWindow.h  TerrainFollowing.h  VulkanWindow.cpp  VulkanWindow.h  assets.qrc  color.frag  color.frag.spv  color.vert  color.vert.spv  color_frag.spv  color_vert.spv  compile_shaders.bat  comprehensive_fix.ps1  crate_fix.patch  custom_createShader.cpp  final_fix.ps1  fix_all_issues.ps1  fix_code.ps1  fix_code.py  fix_draw_scene.ps1  gamemanager.cpp  gamemanager.h  implementation_plan.txt  noTexture.frag  noTexture.vert  noTexture_frag.spv  noTexture_vert.spv  overlay.frag  overlay.vert  overlay.vert.spv  rename_parameters.ps1  shaders.qrc  (+4 more)
assets/shaders/: color_frag.spv  noTexture_frag.spv  overlay.frag.spv
